WIP(局部): 完成 福布斯列表接口和授权验证
