# src/controllers/Billionaires.js
@@ -1,0 +1,7 @@
+const url = require('url')
+
+const Billionaires = require('./BillionairesService')
+
+module.exports.billionairesGET = function billionairesGET(req, res, next) {
+  Billionaires.billionairesGET(req.swagger.params, res, next)
+}
